--- a/package.json
+++ b/package.json
@@ -1,37 +1,44 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
-  "description": "",
-  "type": "module",
-  "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
-    "test": "vitest"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@solidjs/testing-library": "^0.7.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@types/testing-library__jest-dom": "^5.14.6",
-    "jsdom": "^22.1.0",
-    "solid-devtools": "^0.27.3",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
-    "vite-plugin-solid": "^2.7.0",
-    "vitest": "^0.32.2"
-  },
-  "dependencies": {
-    "@cornerstonejs/calculate-suv": "^1.1.0",
-    "@cornerstonejs/core": "^1.23.3",
-    "@cornerstonejs/dicom-image-loader": "^1.23.3",
-    "@cornerstonejs/streaming-image-volume-loader": "^1.23.3",
-    "@cornerstonejs/tools": "^1.23.3",
-    "@solidjs/router": "^0.8.3",
-    "dcmjs": "^0.29.10",
-    "dicom-parser": "^1.8.21",
-    "dicomweb-client": "^0.10.3",
-    "solid-js": "^1.7.6"
-  }
+    "name": "vite-template-solid",
+    "version": "0.0.0",
+    "description": "",
+    "type": "module",
+    "scripts": {
+        "start": "vite",
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview",
+        "test": "vitest",
+        "pretty": "prettier --write ."
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@solidjs/testing-library": "^0.7.1",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@types/testing-library__jest-dom": "^5.14.6",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "jsdom": "^22.1.0",
+        "prettier": "^3.0.3",
+        "solid-devtools": "^0.27.3",
+        "typescript": "^5.1.3",
+        "vite": "^4.3.9",
+        "vite-plugin-solid": "^2.7.0",
+        "vitest": "^0.32.2"
+    },
+    "dependencies": {
+        "@cornerstonejs/calculate-suv": "^1.1.0",
+        "@cornerstonejs/core": "^1.23.3",
+        "@cornerstonejs/dicom-image-loader": "^1.23.3",
+        "@cornerstonejs/streaming-image-volume-loader": "^1.23.3",
+        "@cornerstonejs/tools": "^1.23.3",
+        "@solidjs/router": "^0.8.3",
+        "dcmjs": "^0.29.10",
+        "dicom-parser": "^1.8.21",
+        "dicomweb-client": "^0.10.3",
+        "solid-js": "^1.7.6"
+    },
+    "main": "index.js",
+    "repository": "https://github.com/Luckychips/solid-js-cornerstone.git",
+    "author": "todd.kim <sksms20000@gmail.com>"
 }
