--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
         "@cornerstonejs/streaming-image-volume-loader": "^1.23.3",
         "@cornerstonejs/tools": "^1.23.3",
         "@solidjs/router": "^0.8.3",
+        "@zag-js/checkbox": "^0.26.0",
+        "@zag-js/radio-group": "^0.26.0",
+        "@zag-js/solid": "^0.26.0",
         "dcmjs": "^0.29.10",
         "dicom-parser": "^1.8.21",
         "dicomweb-client": "^0.10.3",
